--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "antd": "^3.3.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1"
   },
   "scripts": {
@@ -16,6 +18,8 @@
   },
   "devDependencies": {
     "babel-plugin-import": "^1.6.6",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
     "react-app-rewire-less": "^2.1.1",
     "react-app-rewired": "^1.5.0"
   }
