--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "babel-plugin-import": "^1.6.6",
     "react-app-rewire-less": "^2.1.1",
-    "react-app-rewired": "^1.5.0"
+    "react-app-rewired": "^1.5.0",
+    "url-loader": "^1.0.1"
   }
 }
