--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",  
   "devDependencies": {
     "babel-plugin-import": "^1.6.6",
     "react-app-rewire-less": "^2.1.1",
