--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "babel-plugin-import": "^1.6.6",
     "react-app-rewire-less": "^2.1.1",
-    "react-app-rewired": "^1.5.0"
+    "react-app-rewired": "^1.5.0",
+    "url-loader": "^1.0.1"
   }
 }
