--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "antd": "^3.3.2",
+    "echarts": "^4.0.4",
     "g2": "^2.3.13",
     "g2-react": "^1.3.2",
     "react": "^16.2.0",
