--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/data-set": "^0.8.9",
     "@antv/g2": "^3.0.12",
     "antd": "^3.3.2",
     "echarts": "^4.0.4",
@@ -16,7 +17,8 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "viser-react": "^2.2.6"
   },
   "scripts": {
     "start": "react-app-rewired start",
