--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@antv/data-set": "^0.8.9",
     "@antv/g2": "^3.0.12",
     "antd": "^3.3.2",
+    "bizcharts": "^3.1.7",
     "echarts": "^4.0.4",
     "g2": "^2.3.13",
     "g2-react": "^1.3.2",
@@ -17,8 +18,7 @@
     "react-scripts": "1.1.1",
     "redux": "^3.7.2",
     "redux-persist": "^5.9.1",
-    "redux-thunk": "^2.2.0",
-    "viser-react": "^2.2.6"
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
